@@ -26,3 +26,4 @@ Contributors
   - Julius Schulz
   - Dominik Wille
   - Amanuel Wolde-Kidan
+  - Philipp Stärk
