@@ -1,0 +1,134 @@
+LAMMPS data file via write_data, version 10 Mar 2021, timestep = 1
+
+30 atoms
+3 atom types
+20 bonds
+1 bond types
+10 angles
+1 angle types
+
+0 42.6 xlo xhi
+0 44.2712 ylo yhi
+-7.1 7.1 zlo zhi
+
+Masses
+
+1 12.011
+2 15.9994
+3 1.008
+
+Pair Coeffs # lj/cut/coul/long
+
+1 0.0663 3.5812
+2 0.1553 3.1656
+3 0 0
+
+Bond Coeffs # harmonic
+
+1 1000 1
+
+Angle Coeffs # harmonic
+
+1 100 109.47
+
+Atoms # full
+
+1 226 2 -0.8472 32.1249585332528 17.741168618467892 -2.774180746853405 0 0 0
+2 226 3 0.4236 31.97546343734371 18.641371117409495 -2.3652145207436868 0 0 0
+3 226 3 0.4236 33.09957802940349 17.617460264122617 -2.9606047324029072 0 0 0
+4 671 3 0.4236 35.1813261372503 10.649394443939139 5.503691697999826 0 0 0
+5 755 3 0.4236 36.45421704732313 36.18139933923659 6.0815061804896455 0 0 0
+6 510 3 0.4236 17.709810834989902 11.565659551396063 2.5177221344575185 0 0 0
+7 755 3 0.4236 35.502288654292634 36.19929880279029 4.754845523257785 0 0 0
+8 556 2 -0.8472 11.151025097522973 25.34940453062463 2.7510288431950327 0 0 0
+9 556 3 0.4236 10.752653795181406 25.099408615199867 1.868549922969955 0 0 0
+10 112 2 -0.8472 10.76257832686998 32.01724968167854 -5.415687189199308 0 0 0
+11 112 3 0.4236 11.293869896750728 32.51788411328236 -4.732268481110067 0 0 0
+12 112 3 0.4236 10.343551776379297 32.66486620503908 -6.052044329690624 0 0 0
+13 556 3 0.4236 10.496321107295623 25.151186854175513 3.4804212338350107 0 0 0
+14 671 3 0.4236 36.68660407762394 11.279725099142974 5.445915032858979 0 0 0
+15 777 3 0.4236 28.338701003802637 42.65099039288056 5.8352615107011605 0 0 0
+16 427 2 -0.8472 21.50175099614952 32.286085769561375 0.3542809013282607 0 0 0
+17 510 3 0.4236 18.27607307962832 10.20750343748477 3.2257303238469035 0 0 0
+18 510 2 -0.8472 18.014116085381776 10.62683701111917 2.356547541695577 0 0 0
+19 659 2 -0.8472 35.62662045342568 7.20675587012955 5.4932005800344035 0 0 0
+20 659 3 0.4236 36.27202608147058 7.956303228537564 5.6401598590593744 0 0 0
+21 659 3 0.4236 36.101353465103735 6.436940901332886 5.0666395609062205 0 0 0
+22 777 2 -0.8472 28.538497526844736 43.44903834882814 5.266806032243807 0 0 0
+23 294 2 -0.8472 17.96504820098954 39.223326416009144 -2.770990552677217 0 0 0
+24 294 3 0.4236 17.205131348092934 39.86764045223904 -2.6853948693698078 0 0 0
+25 777 3 0.4236 29.52280146935263 43.49997125829132 5.09793245705503 0 0 0
+26 755 2 -0.8472 36.04349429838424 35.61930185797311 5.363648296252569 0 0 0
+27 427 3 0.4236 22.359760609300245 32.06102829783153 -0.10738492484854517 0 0 0
+28 427 3 0.4236 20.938488394550234 32.852885932607094 -0.24689597647971537 0 0 0
+29 671 2 -0.8472 36.13206978512576 10.47088045691789 5.250393269141193 0 0 0
+30 294 3 0.4236 18.829820450917527 39.709033131751816 -2.6436145779529747 0 0 0
+
+Velocities
+
+1 0 0 0
+2 0 0 0
+3 0 0 0
+4 0 0 0
+5 0 0 0
+6 0 0 0
+7 0 0 0
+8 0 0 0
+9 0 0 0
+10 0 0 0
+11 0 0 0
+12 0 0 0
+13 0 0 0
+14 0 0 0
+15 0 0 0
+16 0 0 0
+17 0 0 0
+18 0 0 0
+19 0 0 0
+20 0 0 0
+21 0 0 0
+22 0 0 0
+23 0 0 0
+24 0 0 0
+25 0 0 0
+26 0 0 0
+27 0 0 0
+28 0 0 0
+29 0 0 0
+30 0 0 0
+
+Bonds
+
+1 1 1 2
+2 1 1 3
+3 1 8 9
+4 1 8 13
+5 1 10 11
+6 1 10 12
+7 1 16 27
+8 1 16 28
+9 1 18 6
+10 1 18 17
+11 1 19 20
+12 1 19 21
+13 1 22 25
+14 1 22 15
+15 1 23 30
+16 1 23 24
+17 1 26 5
+18 1 26 7
+19 1 29 14
+20 1 29 4
+
+Angles
+
+1 1 2 1 3
+2 1 9 8 13
+3 1 11 10 12
+4 1 27 16 28
+5 1 6 18 17
+6 1 20 19 21
+7 1 25 22 15
+8 1 30 23 24
+9 1 5 26 7
+10 1 14 29 4
